# studioMagenement

./: .gitignore  Home.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
infra/: database.py  inicializa.py
models/: models.py
pages/: 1_👤_Clientes.py  2_💇_Serviços.py  3_📅_Agendamentos.py  4_💰_Custos.py  5_📈_Relatório.py
repositories/: agendamento_repo.py  cliente_repo.py  custo_repo.py  servico_repo.py
scripts/: run.py
services/: agendamento_service.py  cliente_service.py  custo_service.py  dashboard.py  dashboard_report_service.py  servico_service.py
utils/: formatters.py
utils/contents/: frases.py
